--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2357,7 +2357,7 @@ input, select, textarea {
 
 	.image {
 		border-radius: 4px;
-		border: 0;
+		border: 0.5px solid rgba(144, 144, 144, 1); /* mc added borders for images */
 		display: inline-block;
 		position: relative;
 	}
@@ -2701,7 +2701,7 @@ input, select, textarea {
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		background-color: transparent;
-		border-radius: 4px;
+		border-radius: 50px; /* mc make buttons round */
 		border: 0;
 		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
 		color: #555 !important;
@@ -2954,7 +2954,7 @@ input, select, textarea {
 		#header input[type="button"],
 		#header button,
 		#header .button {
-			box-shadow: inset 0 0 0 1px #ffffff;
+			box-shadow: inset 0 0 0 1px #ffffff; /* mc thicken button border */
 			color: #ffffff !important;
 		}
 
@@ -2964,6 +2964,7 @@ input, select, textarea {
 			#header button:hover,
 			#header .button:hover {
 				/*color: #003153 !important; /* mc hover text color blue */
+				box-shadow: inset 0 0 0 2px #ffffff; /* mc thicken border when hover */
 				text-decoration: none;
 				/*background-color: #ffffff; */
 				background-color: rgba(255,255, 255, 0.25);
@@ -3162,6 +3163,7 @@ input, select, textarea {
 			#footer .button:hover {
 				/*color: #003153 !important; /* mc footer links color change */
 				/*background-color: #ffffff; */
+				box-shadow: inset 0 0 0 2px #ffffff; /* mc thicken button border when hover */
 				background-color: rgba(255, 255, 255, 0.25);
 				text-decoration: none;
 			}
