--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -118,13 +118,18 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent !important;
-			color: #4686a0;
+			color: #252D35; /* mc link color change */
 			text-decoration: underline;
 		}
 
-	strong, b {
-		color: #555;
+	strong {
+		color: #212121;
 		font-weight: 600; /* mc change <strong> thickness */
+	}
+
+	b {
+		color: #333;
+		font-weight: 400;
 	}
 
 	em, i {
@@ -157,6 +162,8 @@ input, select, textarea {
 	}
 
 	h3 {
+		color: #494949 !important; /* mc change h3 tag fonts */
+		font-weight: 400 !important;
 		font-size: 1.35em;
 		line-height: 1.5em;
 	}
@@ -2037,17 +2044,18 @@ input, select, textarea {
 	}
 
 	header.major {
-		margin: 0 0 1em 0;
+		margin: 0 0 0.5em 0; /* major: changed bottom margin */
 	}
 
+	/* remove underline
 		header.major:after {
-			background: #4686a0;
+			background: #08080888;
 			content: '';
 			display: inline-block;
 			height: 1px;
 			margin-top: 0.5em;
 			width: 7em;
-		}
+		}*/
 
 		header.major h2, header.major h3, header.major h4, header.major h5, header.major h6 {
 			margin: 0;
@@ -2357,7 +2365,7 @@ input, select, textarea {
 
 	.image {
 		border-radius: 4px;
-		border: 0.5px solid rgba(144, 144, 144, 1); /* mc added borders for images */
+		/*border: 0.5px solid rgba(144, 144, 144, 1); /* mc added borders for images */
 		display: inline-block;
 		position: relative;
 	}
@@ -2389,7 +2397,7 @@ input, select, textarea {
 
 		.image.fit {
 			display: block;
-			margin: 0 0 2em 0;
+			margin: 0 0 1em 0;
 			width: 100%;
 		}
 
@@ -2822,7 +2830,7 @@ input, select, textarea {
 	}
 
 		.main.style1 {
-			background: #fff;
+			background: #edece8; /* mc change main background */
 		}
 
 		.main.style2 {
@@ -2917,12 +2925,14 @@ input, select, textarea {
 
 	#header {
 		padding: 9em 0 9em 0 ;
-		background-color: #4686a0;
+		background-color: #080808; /* mc change background color */
 		color: rgba(255, 255, 255, 0.75);
-		background-attachment: fixed,							fixed,							fixed;
+		/* mc remove background gradient */
+		/*background-attachment: fixed,							fixed,							fixed;
 		background-image: url("images/overlay2.png"), url("images/overlay3.svg"), linear-gradient(45deg, #9dc66b 5%, #4fa49a 30%, #4361c2);
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
+		*/
 		overflow: hidden;
 		position: relative;
 		text-align: center;
@@ -2967,7 +2977,7 @@ input, select, textarea {
 				box-shadow: inset 0 0 0 2px #ffffff; /* mc thicken border when hover */
 				text-decoration: none;
 				/*background-color: #ffffff; */
-				background-color: rgba(255,255, 255, 0.25);
+				/*background-color: rgba(255,255, 255, 0.375);*/
 			}
 
 			#header input[type="submit"]:active,
@@ -2975,7 +2985,7 @@ input, select, textarea {
 			#header input[type="button"]:active,
 			#header button:active,
 			#header .button:active {
-				background-color: rgba(255, 255, 255, 0.25);
+				background-color: rgba(255, 255, 255, 0);
 			}
 
 			#header input[type="submit"].primary,
@@ -3078,7 +3088,7 @@ input, select, textarea {
 				transform: translateY(0);
 				opacity: 1;
 			}
-
+		/* mc remove initial blur
 		#header:after {
 			-moz-transition: opacity 1s ease;
 			-webkit-transition: opacity 1s ease;
@@ -3092,7 +3102,7 @@ input, select, textarea {
 			position: absolute;
 			top: 0;
 			width: 100%;
-		}
+		}*/
 
 	body.is-preload #header .inner {
 		-moz-transform: scale(1.05);
@@ -3118,12 +3128,14 @@ input, select, textarea {
 
 	#footer {
 		padding: 6em 0 6em 0 ;
-		background-color: #4686a0;
+		background-color: #080808; /* mc change background */
 		color: rgba(255, 255, 255, 0.75) !important; /* mc changed to important */
+		/* mc remove footer image
 		background-attachment: fixed,							fixed,							fixed;
 		background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #4361c2, #4fa49a 50%, #9dc66b 95%);
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
+		*/
 		text-align: center;
 	}
 
@@ -3164,7 +3176,7 @@ input, select, textarea {
 				/*color: #003153 !important; /* mc footer links color change */
 				/*background-color: #ffffff; */
 				box-shadow: inset 0 0 0 2px #ffffff; /* mc thicken button border when hover */
-				background-color: rgba(255, 255, 255, 0.25);
+				/*background-color: rgba(255, 255, 255, 0.25); */
 				text-decoration: none;
 			}
 
